exports[`test Checkbox changes the text after click 1`] = `
<label>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox" />
  Off
</label>
`;

exports[`test Checkbox changes the text after click 2`] = `
<label>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox" />
  On
</label>
`;
